test/spectrum/examples/bad/static_call_wrong_type.clj
(ns spectrum.examples.bad.static-call-wrong-type)

(defn foo []
  (clojure.lang.RT/classForName 3))
